Clean up useless demos